Add all unit tests to ant task.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@1507 ab3bd59b-922f-494d-bb5f-6f0a3c29deca